Fix: header responsive et correction de l'alignement du menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,11 @@ html {
 
 header {
     display: flex;
+    flex-direction: row; /* Par défaut côte à côte */
+    flex-wrap: wrap;     /* Permet de passer à la ligne si besoin */
+    justify-content: center; /* Centre le tout */
     align-items: center;
-    gap:50px;
-    background: #e8f5e9a4; /* Transparence */
+    gap: 20px;    background: #e8f5e9a4; /* Transparence */
     backdrop-filter: blur(12px); /* Effet de flou */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Ombre douce */
     padding: 0px 30px;
@@ -36,23 +38,23 @@ header {
 
 /* Titre */
 h1 {
-    font-size: 40px;
+    font-size: 35px;
     color: black;
 }
 
 /* MENU */
 nav {
     display: flex;
-    gap: 15px;
+    gap: 20px;
 }
 
 nav a {
     text-decoration: none;
     color: #000000;
     font-weight: bold;
-    font-size: 200%;
+    font-size: 30px;
     transition: 0.3s;
-    margin-right: 40px;
+    margin-right: 10px;
 }
 
 nav a:hover {
@@ -553,9 +555,14 @@ font-size: 100%;
 
 @media (max-width: 1024px) {
     header {
+	flex-direction: column;
         width: 95%;
         gap: 10px;
         padding: 0 15px;
+    }
+
+    .logo-title {
+        margin-bottom: -10px; /* Espace entre le logo et les liens */
     }
 
     nav a {
@@ -563,22 +570,9 @@ font-size: 100%;
         margin-right: 15px;
     }
 
-    .Titre_User h1, .logoUser, #VosDonnees, #SeComparer, #Conseil, #MonCompte {
-        position: static !important; /* Annule le placement fixe */
-        transform: none !important;
-        margin: 20px auto !important;
-        width: 90% !important;
-        left: 0 !important;
-    }
-
     #a-propos .content {
     flex-direction: column;
     align-items: center;
-    }
-
-    #a-propos img {
-    width: 90%;
-    margin-left: 0; /* Annule le dÃ©calage nÃ©gatif */
     }
 
     #a-propos .text-container p {
